# RIVeR

./: .gitignore  CHANGELOG.md  compute_sections.py  coordinate_transform.py  define_roi_masks.py  dist2coord.py  image_preprocessing.py  intersection.py  main_desk.py  main_desk.spec  piv_fftmulti.py  piv_pipeline.py  pyproject.toml  readme.md  readme.txt  requirements.txt  rvr_extra.py  rvr_piv_loop.py  rvr_rec_res.py  sample_report.html  sections.json  settings.json  uav_coordinate_transform.py  uav_transformation_matrix.json  video_to_frames.py  video_to_frames_2.py  wisttf.py  x_sections.json
GUI/: index.html  package.json  tsconfig.json  vite.config.ts
GUI/electron/: interfaces.ts  main.ts
GUI/electron/ipcMainHandlers/: createFolderStructure.ts  firstFrame.ts  firstFrameHandler.ts  getImages.ts  initProject.ts  interfaces.ts  pixelSizeHandler.ts  pixelToRealWorld.ts  videoMetadataHandler.ts
GUI/src/: App.css  App.tsx  index.css
GUI/src/components/: Bathimetry.tsx  ButtonLock.tsx  Carousel.tsx  ChartCrossSection.tsx  ImageWithMarks.tsx  Loading.tsx  (+9 more)
examples/: 00_introduction.ipynb  01_video_to_frames.ipynb  02a_nadir_transformation.ipynb  02b_oblique_transformation.ipynb  02c_fixed_station_transformation copy.ipynb  03_cross_sections.ipynb  05_discharge_calculation.ipynb  coordinate_transform_example.ipynb
examples/.virtual_documents/: coordinate_transform_example.ipynb
examples/compute_section/: compute_section_example.ipynb  piv_results.json  uav_transformation_matrix.json  xsections.json
examples/define_roi_masks/: bath.csv  define_roi_masks_example.ipynb  xsections.json
examples/piv_pipeline/: piv_pipeline_example.ipynb  uav_transformation_matrix.json  xsections.json
examples/utils/: __init__.py  arrow_utils.py  visualization.py
gui/: .env.development  .env.example  .env.production  .gitignore  CHANGELOG.md  README.md  electron-builder.json5  electron-builder.onedir.json5  electron-builder.onefile.json5  eslint.config.cjs  finish.html  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
gui/electron/: getDistances.ts  getIpcamImages.ts  main.ts  preload.ts
gui/icons/: mac.icns
gui/src/: App.css  App.tsx  finish.css  finish.tsx  index.css  main.tsx
notebooks/: 01_video_to_frames copy.ipynb  02a_nadir_transformation.ipynb  02b_oblique_transformation.ipynb
notebooks/utils/: arrow_utils.py
river/cli/: __main__.py
river/core/: compute_section.py  coordinate_transform.py  define_roi_masks.py  exceptions.py  image_preprocessing.py  legacy_compute_section.py  legacy_coordinate_transform.py  legacy_define_roi_masks.py  legacy_matlab_smoothn.py  legacy_piv_loop.py  legacy_piv_pipeline.py  legacy_replace_scipy.py  legacy_rvr_retreive_settings.py  legacy_rvr_video2frames.py  legacy_video_to_frames_2.py  piv_fftmulti.py  piv_loop.py  piv_pipeline.py  utils.py  video_to_frames.py
(+279 files in other folders)
